--- a/app/static/index.html
+++ b/app/static/index.html
@@ -21,7 +21,7 @@
         <!-- Cột bên trái - Tab và Webcam/Upload (8/12 cột trên desktop) -->
         <div class="lg:col-span-8 order-1">
           <!-- Tab Navigation -->
-          <div class="flex mb-4 border-b">
+          <div class="flex mb-1 border-b">
             <button class="tab py-2 px-4 rounded-t-lg bg-gray-200 hover:bg-gray-300 mr-2 bg-white font-bold active" data-tab="upload">
               Tải lên hình ảnh
             </button>
@@ -98,7 +98,7 @@
 
         <!-- Cột bên phải - Lịch sử -->
         <div class="lg:col-span-4 order-2">
-          <div id="historyContainer" class="bg-white p-4 rounded-lg shadow-md mb-6 lg:sticky lg:top-4">
+          <div id="historyContainer" class="bg-white p-4 rounded-lg shadow-md mb-6 lg:top-4">
             <div class="flex justify-between items-center mb-4">
               <h2 class="text-xl font-semibold">Lịch sử phát hiện</h2>
               <button id="clearHistoryBtn" class="px-3 py-1 bg-red-500 text-white rounded hover:bg-red-600 transition">
@@ -107,12 +107,34 @@
             </div>
             <div id="historyGrid" class="divide-y divide-gray-200 overflow-y-auto max-h-[calc(100vh-150px)]"></div>
           </div>
+
+          <!-- Statistics Container -->
+        <div id="statisticContainer" class="bg-white p-4 rounded-lg shadow-md mb-6 lg:sticky lg:top-4">
+          <div class="flex justify-between items-center mb-4">
+            <h2 class="text-xl font-semibold">Thống kê cảm xúc</h2>
+            <button id="refreshStatistics" class="px-3 py-1 bg-green-500 text-white rounded hover:bg-green-600 transition">
+              Làm mới
+            </button>
+          </div>
+          <div class="mb-4">
+            <label for="periodFilter" class="mr-2">Lọc theo:</label>
+            <select id="periodFilter" class="p-2 border rounded">
+              <option value="all">Tất cả</option>
+              <option value="week">Tuần</option>
+              <option value="month">Tháng</option>
+              <option value="year">Năm</option>
+            </select>
+          </div>
+          <div id="statisticsContainer">
+            <canvas id="emotionsChart" class="max-w-full"></canvas>
+            <div id="statisticsSummary" class="mt-4"></div>
+          </div>
         </div>
       </div>
     </div>
 
     <!-- Liên kết tới main.js -->
     <script type="module" src="/static/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </body>
 </html>
-<!
